--- a/src/components/tripList.css
+++ b/src/components/tripList.css
@@ -23,3 +23,15 @@
     color:rgb(0, 0, 0);
     text-align: center;
 }
+
+.trip-list .filters{
+    display:flex;
+    gap:10px;
+}
+
+.trip-list button {
+    padding:10px;
+    font-size: 16px;
+    flex-grow: 1;
+
+}
